# MetaSim

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
cmake/: FindMKL.cmake
lib/: CMakeLists.txt  grid.hpp  io_helper.hpp  meta.hpp  particles.hpp  simulator.hpp
lib/MPM/: mpm_grid.hpp  mpm_simulator.cpp  mpm_simulator.hpp
lib/Math/: interpolation.hpp
lib/Utils/: particle_helper.hpp
projects/: CMakeLists.txt
projects/demo/: CMakeLists.txt  main.cpp
projects/mpm/: mpm_grid.hpp  mpm_simulator.cpp  mpm_simulator.hpp
src/: CMakeLists.txt  grid.hpp  meta.hpp  meta_pch.hpp  particles.hpp  simulator.hpp
src/Core/: data_array.hpp  data_container.hpp  forward.hpp.in  meta.hpp  meta.hpp.in  particles.hpp  range_set.cpp  range_set.hpp  ranges.hpp  simulator.hpp
src/MPM/: mpm_grid.hpp  mpm_simulator.hpp
src/Math/: poisson_disk.hpp
src/Utils/: io_helper.hpp  logger.cpp  logger.hpp  tmp_helper.hpp
src/test/: CMakeLists.txt  data_test.cpp  pqsort.cpp  tbb_parallel.cpp
